# minimap

./: .gitattributes  .gitignore  AGENTS.md  Marloth.sln  Minimap.sln  icon.svg.import  main.tscn  marloth.csproj  minimap.csproj  project.godot
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md  game-design.md  technical-design.md
docs/features/: README.md  remote-headless-godot.md
docs/game/features/: README.md
docs/technical/features/: README.md  remote-headless-godot.md  testing.md
entities/: hex_cell.tscn  player_visual.tscn
scenes/: world.tscn
scripts/: build_godot_launcher.sh  godot_remote.env.example  godot_remote.py  run_godot_functional_tests.sh
src/Marloth.Core/: Greeting.cs  Marloth.Core.csproj
src/Minimap.Automation.Contracts/: Minimap.Automation.Contracts.csproj
src/Minimap.Client/: GodotRpcHost.cs  HexLayout.cs  Minimap.Client.csproj  WorldRoot.cs
src/Minimap.Core/: Greeting.cs  Minimap.Core.csproj
src/Minimap.Simulation/: CellType.cs  GameWorld.cs  HexAxial.cs  HexGrid.cs  IWorldGenerator.cs  Minimap.Simulation.csproj  PlayerSlot.cs  SeededWorldGenerator.cs  WorldEvolution.cs
tests/Marloth.Core.Tests/: GreetingTests.cs  Marloth.Core.Tests.csproj
tests/Minimap.Core.Tests/: GreetingTests.cs  Minimap.Core.Tests.csproj
tests/Minimap.Simulation.Tests/: HexAxialTests.cs  HexGridTests.cs  Minimap.Simulation.Tests.csproj  WorldEvolutionTests.cs
tests/functional/: README.md
tools/godot-launcher/: .env.example  Cargo.toml  README.md
tools/godot-launcher/src/: config.rs  main.rs  paths.rs
(+10 files in other folders)
