[package]
name = "godot-launcher"
version = "0.1.0"
edition = "2021"
description = "WSL-local HTTP launcher for headless Windows Godot (narrow API, bearer auth)"
publish = false

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "process",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
nix = { version = "0.29", features = ["signal"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
